start work on event list
