# api/src/routes/events.js
@@ -1,4 +1,5 @@
 const PostEventController = require('../controllers/events/postEvent');
+const GetEventsController = require('../controllers/events/getEvents');
 
 const usersRoutes = {
   basePath: '/events',
@@ -7,6 +8,12 @@ const usersRoutes = {
       method: 'post',
       path: '',
       controller: PostEventController,
+      requiresAuthentication: true,
+    },
+    {
+      method: 'get',
+      path: '',
+      controller: GetEventsController,
       requiresAuthentication: true,
     },
   ],
